...
    }
    Scaffold {
        Surface(
            modifier = Modifier
                .fillMaxSize()
                .padding()
                .testTag("homeScreen")
        ) {
            when (uiState.value) {
                is HomeScreenUIEvents.Loading -> {
                    loading.value = true
                    error.value = null
                }
...
